[gd_scene load_steps=27 format=3 uid="uid://dh1x05uimkvyl"]

[ext_resource type="Texture2D" uid="uid://ytb3b2y6apqc" path="res://icon.svg" id="1_0tjrn"]
[ext_resource type="Script" path="res://less_is_store/clients/client.gd" id="1_ckolu"]
[ext_resource type="Script" path="res://less_is_store/clients/path_walker/path_walker.gd" id="2_5v3iy"]
[ext_resource type="Script" path="res://less_is_store/clients/state/state.gd" id="2_tmndr"]
[ext_resource type="Texture2D" uid="uid://d881yb54h3f6" path="res://less_is_store/clients/particle_appear.webp" id="4_vmbl5"]
[ext_resource type="Script" path="res://less_is_store/clients/backpack/backpack.gd" id="5_cnsla"]
[ext_resource type="Texture2D" uid="uid://otvjqlsed4sb" path="res://less_is_store/clients/particle_coin.webp" id="5_d0pkr"]
[ext_resource type="PackedScene" uid="uid://bghfeuiwyjmlf" path="res://less_is_store/tools/audio_player/audio_player.tscn" id="5_e3icu"]
[ext_resource type="PackedScene" uid="uid://cmdg8t10asscc" path="res://less_is_store/player/walk_particles.tscn" id="5_vo6lv"]
[ext_resource type="Script" path="res://less_is_store/clients/backpack/ingredient_list.gd" id="6_ek4iu"]
[ext_resource type="Script" path="res://less_is_store/clients/knockback.gd" id="7_a68jm"]
[ext_resource type="PackedScene" uid="uid://c6wt2xsgxkdh6" path="res://less_is_store/tools/shadow_locator/shadow_locator.tscn" id="8_5aek1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_afxei"]
height = 55.0

[sub_resource type="Animation" id="Animation_a4w2d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Visuals:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Visuals:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_dcsqw"]
resource_name = "appear"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Visuals:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(0.7, 1.3), Vector2(1.3, 0.7), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Visuals:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -24), Vector2(0, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ff3la"]
resource_name = "idle"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Visuals:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Visuals:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6imxw"]
resource_name = "stunned"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.392157)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_poqhq"]
_data = {
"RESET": SubResource("Animation_a4w2d"),
"appear": SubResource("Animation_dcsqw"),
"idle": SubResource("Animation_ff3la"),
"stunned": SubResource("Animation_6imxw")
}

[sub_resource type="Gradient" id="Gradient_7m4la"]
offsets = PackedFloat32Array(0, 0.604762, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_88s5k"]
gradient = SubResource("Gradient_7m4la")

[sub_resource type="Curve" id="Curve_5lkdy"]
_data = [Vector2(0, 0.0181818), 0.0, 0.0, 0, 0, Vector2(0.419087, 1), 0.0, 0.0, 0, 0, Vector2(0.502075, 1), 0.0, 0.0, 0, 0, Vector2(0.962656, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_kl7bv"]
curve = SubResource("Curve_5lkdy")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_156c4"]
particle_flag_align_y = true
particle_flag_disable_z = true
spread = 180.0
gravity = Vector3(0, 98, 0)
initial_velocity_min = 300.0
initial_velocity_max = 400.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.4
scale_max = 0.4
scale_curve = SubResource("CurveTexture_kl7bv")
color_ramp = SubResource("GradientTexture1D_88s5k")
hue_variation_max = 1.0

[sub_resource type="Curve" id="Curve_3ptrd"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.701245, 0.990909), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_m5itl"]
curve = SubResource("Curve_3ptrd")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6vifq"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
gravity = Vector3(0, 900, 0)
initial_velocity_min = 300.0
initial_velocity_max = 400.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.15
scale_max = 0.15
scale_curve = SubResource("CurveTexture_m5itl")

[node name="Client" type="CharacterBody2D" groups=["Clients"]]
collision_mask = 2
script = ExtResource("1_ckolu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -10)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_afxei")

[node name="State" type="Node2D" parent="."]
script = ExtResource("2_tmndr")

[node name="GrabTimer" type="Timer" parent="State"]
one_shot = true

[node name="StunTimer" type="Timer" parent="State"]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="State"]
libraries = {
"": SubResource("AnimationLibrary_poqhq")
}

[node name="AudioPlayer" parent="State" instance=ExtResource("5_e3icu")]

[node name="AppearParticles" type="GPUParticles2D" parent="State"]
position = Vector2(0, -54)
emitting = false
amount = 24
process_material = SubResource("ParticleProcessMaterial_156c4")
texture = ExtResource("4_vmbl5")
lifetime = 0.7
one_shot = true
explosiveness = 1.0

[node name="CoinParticles" type="GPUParticles2D" parent="State"]
position = Vector2(0, -145)
emitting = false
process_material = SubResource("ParticleProcessMaterial_6vifq")
texture = ExtResource("5_d0pkr")
lifetime = 0.6
one_shot = true

[node name="PathWalker" type="Node2D" parent="."]
script = ExtResource("2_5v3iy")

[node name="AudioWalk" parent="PathWalker" instance=ExtResource("5_e3icu")]

[node name="WalkParticles" parent="PathWalker" instance=ExtResource("5_vo6lv")]
position = Vector2(0, -23)
scale = Vector2(0.5, 0.5)

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
modulate = Color(1, 0.0431373, 0.133333, 1)
position = Vector2(0, -64)
scale = Vector2(0.453125, 1)
texture = ExtResource("1_0tjrn")

[node name="Backpack" type="Node2D" parent="."]
script = ExtResource("5_cnsla")

[node name="IngredientList" type="Node2D" parent="Backpack"]
script = ExtResource("6_ek4iu")

[node name="Container" type="Node2D" parent="Backpack/IngredientList"]

[node name="AudioPlayer" parent="Backpack" instance=ExtResource("5_e3icu")]

[node name="Knockback" type="Node2D" parent="."]
script = ExtResource("7_a68jm")

[node name="ShadowLocator" parent="." instance=ExtResource("8_5aek1")]

[connection signal="timeout" from="State/GrabTimer" to="State" method="_on_grab_timer_timeout"]
[connection signal="timeout" from="State/StunTimer" to="State" method="_on_stun_timer_timeout"]
[connection signal="animation_finished" from="State/AnimationPlayer" to="State" method="_on_animation_player_animation_finished"]
